@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h,v 1.35 1999/04/17 23:18:11 lusky Exp $
+ * $Id: config.h,v 1.36 1999/05/04 04:41:43 db Exp $
  */
 
 #ifndef	__config_include__
@@ -993,6 +993,18 @@
  * well.
  */
 #define FLUD
+
+/* ANTI_DRONE_FLOOD - anti flooding code for drones
+ * This code adds server side ignore for a client who gets
+ * messaged more than drone_count times within drone_time seconds
+ * unfortunately, its a great DOS, but at least the client won't flood off.
+ * I have no idea what to use for values here, trying 10 privmsgs
+ * within 5 seconds.
+ * I'll do better next time, this is a Q&D -Dianora
+ */
+#define ANTI_DRONE_FLOOD
+#define DEFAULT_DRONE_TIME 5
+#define DEFAULT_DRONE_COUNT 10
 
 /* 
  * ANTI_SPAMBOT
