@@ -2,7 +2,10 @@
 *** HYBRID CHANGELOG
 *** Newest entries at top
 
-version hybrid-6-b60   29-Apr-1999
+version hybrid-6-b62   4-May-1999
+* Added ANTI_DRONE_FLOOD code	
+	
+version hybrid-6-b61   2-May-1999
 * fixed major bug in mtrie code. I lines would be treated as K lines
   in some cases. 2-May-1999
 
